--- a/_posts/2018-05-24-test2.md
+++ b/_posts/2018-05-24-test2.md
@@ -1,8 +1,6 @@
 ---
-layout: post
-title:  "Test2!"
-date:   2018-05-24 1:00:00 -0600
-categories: test hello_world
+title: Test2!
+date: 2018-05-24 1:00:00 -0600
 tags:
  - test
  - example
